# little-dorrit-editor

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: pages.yaml
config/: models.toml
data/eval/: README.md
data/sample/: 001.json  002.json  README.md
docs/: CNAME  index.html  results.json
docs/css/: styles.css
docs/js/: leaderboard.js
leaderboard/: index.html  results.json
little_dorrit_editor/: __init__.py  cli.py  config.py  convert.py  evaluate.py  leaderboard.py  predict.py  prompt.py  types.py  utils.py
predictions/claude-3-7-sonnet-latest/: config.json
predictions/gpt-4-turbo/: config.json
predictions/gpt-4.5-preview/: config.json
predictions/gpt-4o/: config.json
predictions/gpt-4o-mini/: config.json
predictions/gpt_4_1/: config.json
predictions/gpt_4_1_mini/: config.json
predictions/gpt_4_1_nano/: config.json
predictions/gpt_4_5_preview/: .noinclude  config.json
predictions/gpt_4_turbo/: config.json
predictions/gpt_4o/: config.json
predictions/gpt_4o_mini/: config.json
predictions/gpt_o4_mini/: config.json
predictions/or_chatgpt_4o_latest/: config.json
predictions/or_claude_3_7_sonnet/: config.json
predictions/or_deepseek_chat_v3_0324/: config.json
predictions/or_deepseek_r1/: config.json
predictions/or_gemini_2_0_flash_001/: config.json
predictions/or_gemini_2_5_pro_preview_03_25/: config.json
predictions/or_gemma_3_27b_it/: config.json
predictions/or_gpt_4_turbo/: config.json
scripts/: build_site_results.py  check_predictions.py  convert_to_hf_dataset.py  evaluate.py  get_model_name.py  predict.py  prepare_datasets.py  reorganize_directories.py  report_evaluation.sh  run_evaluation.sh  run_prediction.sh  run_tests.sh  shuffle_model_names.sh
tests/: test_evaluate.py
(+2503 files in other folders)
